--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "csv-server": "^0.5.3",
+    "csv-parse": "^5.3.0",
+    "csv-parser": "^3.0.0",
     "express": "^4.18.1"
   }
 }
