--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,8 @@
   "main": "Missision controll",
   "license": "MIT",
   "scripts": {
+    "test": "jest",
+    "test-watch": "jest-watch",
     "start": "node src/server.js",
     "watch": "nodemon src/server.js"
   },
@@ -11,6 +13,8 @@
     "cors": "^2.8.5",
     "csv-parse": "^5.3.0",
     "csv-parser": "^3.0.0",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "jest": "^29.0.3",
+    "supertest": "^6.2.4"
   }
 }
