--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
     "test": "jest",
     "test-watch": "jest-watch",
     "start": "node src/server.js",
-    "watch": "nodemon src/server.js"
+    "watch": "nodemon src/server.js",
+    "cluster": "pm2 start src/server.js -i max"
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -15,6 +16,7 @@
     "csv-parser": "^3.0.0",
     "express": "^4.18.1",
     "jest": "^29.0.3",
+    "pm2": "^5.2.0",
     "supertest": "^6.2.4"
   }
 }
