--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "csv-parser": "^3.0.0",
     "express": "^4.18.1",
     "jest": "^29.0.3",
+    "mongoose": "^6.6.1",
     "pm2": "^5.2.0",
     "supertest": "^6.2.4"
   }
