--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "testEnvironment": "node"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "cors": "^2.8.5",
     "csv-parse": "^5.3.0",
     "csv-parser": "^3.0.0",
