--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "install-server": "npm install --prefix server",
+    "install-client": " npm install --prefix client",
+    "install": "concurrently \"npm run install-server\" \"npm run install-client\"",
     "server": "npm run watch --prefix server",
     "client": "npm start --prefix client",
     "watch": "concurrently \"npm run server\" \"npm run client\"",
-    "deploy": "concurrently \"npm run build --prefix client\" \" npm start --prefix server\""
+    "deploy": "concurrently \"npm run build --prefix client\" \" npm start --prefix server\"",
+    "test": "concurrently \"npm test --prefix server\" \" npm test --prefix client\""
   },
   "repository": {
     "type": "git",
