--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -1,10 +1,9 @@
-name: Nasa Project CI
+name: NASA Project CI
 on:
   push:
-    branches: [ main ]
+    branches: [ master ]
   pull_request:
-    branches:[ main ]
-
+    branches: [ master ]
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -14,5 +13,5 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: '16'
-      -run: npm install
-      -run: npm run build --prefix client
+      - run: npm install
+      - run: npm run build --prefix client
