--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "express": "^4.18.1",
     "jest": "^29.0.3",
     "mongoose": "^6.6.1",
+    "nasa-project": "file:..",
     "pm2": "^5.2.0",
     "supertest": "^6.2.4"
   }
