--- a/package.json
+++ b/package.json
@@ -7,11 +7,7 @@
     "install-server": "npm install --prefix server",
     "install-client": "npm install --prefix client",
     "install": "npm run install-server && npm run install-client",
-    "server": "npm run watch --prefix server",
-    "client": "npm start --prefix client",
-    "watch": "concurrently \"npm run server\" \"npm run client\"",
-    "deploy": "concurrently \"npm run build --prefix client\" \" npm start --prefix server\"",
-    "test": "concurrently \"npm test --prefix server\" \" npm test --prefix client\""
+    "client": "npm start --prefix client"
   },
   "repository": {
     "type": "git",
