--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,9 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "^5.0.0"
   },
+  "overrides": {
+    "nth-check@1.0.2": "2.0.1"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "set BUILD_PATH=../server/public&& react-scripts build",
