--- a/client/package.json
+++ b/client/package.json
@@ -7,15 +7,12 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "^5.0.1"
-  },
-  "overrides": {
-    "nth-check@1.0.2": "2.0.1"
+    "react-scripts": "^5.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "set BUILD_PATH=../server/public && react-scripts build",
-    "test": "react-scripts test --passWithNoTests",
+    "build": "set BUILD_PATH=../server/public&& react-scripts build",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -35,5 +32,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "overrides": {
+    "nth-check@1.0.2": "2.0.1"
   }
 }
