--- a/server/package.json
+++ b/server/package.json
@@ -1,34 +1,29 @@
 {
-  "name": "nasa-project-api",
+  "name": "nasa_project",
   "version": "1.0.0",
-  "description": "NASA Mission Control API",
-  "main": "src/server.js",
+  "main": "Missision controll",
+  "license": "MIT",
   "scripts": {
     "test": "jest",
-    "test-watch": "jest --watch",
-    "watch": "nodemon src/server.js",
+    "test-watch": "jest-watch",
     "start": "node src/server.js",
+    "watch": "nodemon src/server.js",
     "cluster": "pm2 start src/server.js -i max"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
   "jest": {
     "testEnvironment": "node"
   },
   "dependencies": {
-    "axios": "^0.26.1",
+    "axios": "^0.27.2",
     "cors": "^2.8.5",
-    "csv-parse": "^5.0.4",
-    "dotenv": "^16.0.0",
-    "express": "^4.17.3",
-    "mongoose": "^6.2.7",
-    "morgan": "^1.10.0",
-    "pm2": "^5.2.0"
-  },
-  "devDependencies": {
-    "jest": "^26.6.3",
-    "nodemon": "^2.0.15",
-    "supertest": "6.1.6"
+    "csv-parse": "^5.3.0",
+    "csv-parser": "^3.0.0",
+    "express": "^4.18.1",
+    "jest": "^29.0.3",
+    "mongoose": "^6.6.1",
+    "pm2": "^5.2.0",
+    "supertest": "^6.2.4"
   }
 }
